Creado mediante Colaboratory

--- a/dimorales_QuanconnectTutotials.ipynb
+++ b/dimorales_QuanconnectTutotials.ipynb
@@ -6,7 +6,7 @@
       "name": "dimorales_QuanconnectTutotials.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPLulQpPUISLkZqirjG/REK",
+      "authorship_tag": "ABX9TyPEhSWHaOGmvfdnz2eZSI41",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e79c9a5c-3935-4f18-8f8e-d02d9a083737"
+        "outputId": "9413aaa2-8a3a-43c0-d119-1dd1e0b4a48a"
       },
       "source": [
         "my_string1 = 'Welcome to'\n",
@@ -70,7 +70,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QA79axLFFSeg",
-        "outputId": "e27d4c66-8992-4f1d-e0c4-b6128c169ad1"
+        "outputId": "8e1541ae-dfdf-45e5-9c30-8778ff50721a"
       },
       "source": [
         "my_int = 2**100000\n",
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D8-0f7rDFdBh",
-        "outputId": "46f585db-b5ef-4efe-f015-192618e13084"
+        "outputId": "7d7a7b86-ea51-4812-f9a7-b4e50a961ed1"
       },
       "source": [
         "my_string = \"2415f\"\n",
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fS1qe6qnFd1P",
-        "outputId": "346b7e71-c0b2-4c7e-8523-a5d0553bd2ab"
+        "outputId": "f7c079ad-6404-44d8-cf61-445436901fa0"
       },
       "source": [
         "my_string = \"300\"\n",
@@ -150,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UbpFUsc5FgqF",
-        "outputId": "c29410df-4e65-47a7-bec7-0c5746e63a2e"
+        "outputId": "f1289649-49d2-435f-f632-8b7004767bfe"
       },
       "source": [
         "my_bool = True\n",
@@ -176,7 +176,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dcdJRegAFw5A",
-        "outputId": "7b1b0a90-6666-4945-a5c3-71f38a53e298"
+        "outputId": "e6c36f5b-a02c-4e8e-9a79-25d7c2723405"
       },
       "source": [
         "print(\"Addition \", 3+5)\n",
@@ -207,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MzGKniVAF1fB",
-        "outputId": "197235a8-cd41-45dd-e572-e483eb0b08c9"
+        "outputId": "8c9a488c-898b-4f07-eb06-df2848be3d45"
       },
       "source": [
         "print(5/7)\n",
@@ -232,7 +232,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lddcquBzGFKT",
-        "outputId": "d16dc2f9-857d-4a39-b4ec-67e195feab68"
+        "outputId": "fb828f57-626d-42fa-8261-47d870f8f1d0"
       },
       "source": [
         "my_list = [1,2,3,'Quant', 'Connect']\n",
@@ -256,7 +256,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CdupOGQIGP3_",
-        "outputId": "14ab5c05-75e7-459f-f81b-34d67418ec77"
+        "outputId": "63ba95af-25d3-479a-c97b-81f537374bfe"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -284,7 +284,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XLPKGyKXGh8E",
-        "outputId": "23a3070b-cc3c-4e28-d70d-3d3937e0694e"
+        "outputId": "ee7f83e7-702f-46d0-b921-f4a8e8b347f6"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -309,7 +309,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FFCiV-OTGuMg",
-        "outputId": "9eef5868-07b5-4538-fbc3-f5df5932edef"
+        "outputId": "432ed06d-6a2f-4dd9-ee70-f7ef40d41602"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -333,7 +333,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0XSbTgSAHUmF",
-        "outputId": "ada7a850-f92b-4fc2-fcff-1757307f8b7f"
+        "outputId": "210e7068-e93c-47e5-ccbb-441b619d5e1c"
       },
       "source": [
         "print(my_list[4:])"
@@ -356,7 +356,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bgD5xPCHZMQ",
-        "outputId": "7a026c83-9747-402f-aee2-85fa470c7854"
+        "outputId": "92a07f69-5578-4493-d69a-189198853d6b"
       },
       "source": [
         "print(my_list[:5])"
@@ -379,7 +379,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OuCUqEepHfJg",
-        "outputId": "d68f2814-59ff-4475-a8c3-37ed40fc1004"
+        "outputId": "59ef446f-cace-4ce3-a0c2-4b67f74b4e4f"
       },
       "source": [
         "my_list = ['Hello', 'world', 'Hello']\n",
@@ -404,7 +404,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bixBZQjGHmVg",
-        "outputId": "f3c05d03-dc01-444d-c354-9b9dfa9248fe"
+        "outputId": "2f2b714e-ae09-412f-af94-64f11a9ea695"
       },
       "source": [
         "my_list.remove('world')\n",
@@ -439,7 +439,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xUhZC_G2H8xg",
-        "outputId": "1aee4172-0053-4188-f9e6-3b39e144c92d"
+        "outputId": "be7457a9-5bb9-48f8-aff3-aa2f78be97e0"
       },
       "source": [
         "my_tuple = ('Welcome','to','hello world')\n",
@@ -463,7 +463,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xtps4UnVISVj",
-        "outputId": "5d945b89-2054-4d6c-f18a-8a1839adf982"
+        "outputId": "4da4490a-aa3b-48a5-a5f9-35f73dbf6101"
       },
       "source": [
         "stock_list = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
@@ -476,7 +476,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'F', 'GOOG', 'AAPL', 'INSTA', 'FB', 'IBM'}\n"
+            "{'IBM', 'GOOG', 'AAPL', 'INSTA', 'FB', 'F'}\n"
           ]
         }
       ]
@@ -499,7 +499,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Wj49mZYJbhV",
-        "outputId": "eeb23b88-ea28-411a-f8dd-f584b994401b"
+        "outputId": "a338db6e-4a80-4416-943b-6bb67c1dabfc"
       },
       "source": [
         "print(my_dic['HELLO'])"
@@ -522,7 +522,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FMHLWwysJ2CX",
-        "outputId": "2f772340-1588-4339-e1e6-197752250c1e"
+        "outputId": "e7e4ae2c-c7e9-410b-d6cb-85065fd28b8b"
       },
       "source": [
         "my_dic['HELLO'] = 'Hello World'\n",
@@ -546,7 +546,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "czipGKRNKsUi",
-        "outputId": "9f6646f4-1b71-4a3c-e21b-50421ef01dff"
+        "outputId": "f4c3652e-2532-4216-ff9b-fe294330dd95"
       },
       "source": [
         "print(my_dic.keys())"
@@ -569,7 +569,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rMg9JE7QK8tH",
-        "outputId": "8ebedcc1-a876-4a7a-835d-dbccf41dd023"
+        "outputId": "f4cf0c45-d034-4b0c-ef6f-bd0fbf3bf355"
       },
       "source": [
         "my_str = 'Welcome to QuantConnect'\n",
@@ -593,7 +593,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BUzEVL_uLOio",
-        "outputId": "46fd367f-8550-430d-b7ab-22f03540323a"
+        "outputId": "1701b4d5-cf9e-43c7-c28d-9908ef7c9480"
       },
       "source": [
         "print('Counting the number of e appears in this sentence'.count('a'))\n",
@@ -620,7 +620,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xGSDtPvxM8jc",
-        "outputId": "e4f46642-fcce-4277-b928-d14f877b4250"
+        "outputId": "1d33fa05-ab73-4755-af79-31a718b97bd6"
       },
       "source": [
         "Time = '2021-10-19 10:38:51'\n",
@@ -658,7 +658,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xb5wMX0fOEtI",
-        "outputId": "0e54a174-8f70-46ab-aadb-b3343107fae1"
+        "outputId": "363b424a-f79e-4afc-eefa-d64d44f25021"
       },
       "source": [
         "my_time = 'Hour:{}, Minute:{}, Second:{}'.format('10','58','40')\n",
@@ -682,7 +682,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0j4PlIb5OgG8",
-        "outputId": "2551c17e-713a-40f1-e1b2-5736b2eaa21e"
+        "outputId": "2ffae7eb-1aa8-42da-e2ac-08532c130633"
       },
       "source": [
         "print('the pi number is %f'%3.14)\n",
@@ -716,7 +716,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mb-yIhHUPe-f",
-        "outputId": "7ce41bb2-c6ef-4e54-ff3f-0b6415d8dd91"
+        "outputId": "f6dfd61e-51c8-46b6-e91f-3538162ea6c5"
       },
       "source": [
         "print(3 == 5)\n",
@@ -747,7 +747,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6DvKmLJeQeZI",
-        "outputId": "e0c301b2-38b4-45d0-9ef2-2ac9353c6976"
+        "outputId": "1da0579b-81ec-4187-c63b-372f925cd819"
       },
       "source": [
         "print(10 > 5 and 7 > 5)\n",
@@ -776,7 +776,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "njf6XvBSRFtE",
-        "outputId": "d51d5ec2-0ee0-44f0-aff8-7de6502a5adc"
+        "outputId": "240dcc55-79af-4a70-c26e-9e1dbae61f19"
       },
       "source": [
         "print((10 > 5 or 7 < 5) and (10!=7 and 6>5) and not ( 7 < 5 or 6 < 10 and (10!=5 and 6>3)))\n",
@@ -801,7 +801,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pCqq4c6_R01v",
-        "outputId": "6e89d099-ef1b-40d4-c8ce-0ae2a0592f92"
+        "outputId": "d127c5c8-8a55-4e63-8a51-0b1c37dcfde7"
       },
       "source": [
         "i = 100\n",
@@ -826,7 +826,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NVwqeDydSU9P",
-        "outputId": "081ba8a1-7bc7-4d9b-dfac-81ce23dde615"
+        "outputId": "e4338ed0-4915-4aac-e5fd-fad820efc831"
       },
       "source": [
         "p = 10 > 15\n",
@@ -858,7 +858,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9I9qTAunShX_",
-        "outputId": "c2db23a3-ae42-4685-e573-9aedf43c488b"
+        "outputId": "3e416a87-33e5-4c7c-ca6a-ccedf7ec7def"
       },
       "source": [
         "i = 0\n",
@@ -965,7 +965,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xvDju2-zTL7d",
-        "outputId": "a9445174-f4b2-4d03-c496-97e13fbf1d8b"
+        "outputId": "a49e161a-abde-4c91-f4d4-69853c5bcf9d"
       },
       "source": [
         "for i in [1,'hello',3,'Quan',5]:\n",
@@ -993,7 +993,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "74B4wU2NTUyp",
-        "outputId": "5f64d9a9-87bd-4005-a2d1-a6fbf374582c"
+        "outputId": "236f491e-84c6-4823-b0a3-062be8ae1e46"
       },
       "source": [
         "stocks = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
@@ -1024,7 +1024,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mNcxbfhDT_Xx",
-        "outputId": "2ff2288c-c8f8-421a-c18c-1daf4d5f75e3"
+        "outputId": "151f90f0-489a-479e-c5b4-1514d2a816de"
       },
       "source": [
         "stocks = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
@@ -1042,6 +1042,117 @@
             "AAPL\n",
             "GOOG\n",
             "IBM\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fKTOAYOEUhoj",
+        "outputId": "b92f1fdd-1e9c-49ba-e9b4-35e4e6a1ee26"
+      },
+      "source": [
+        "stocks = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
+        "for i in stocks:\n",
+        "    if i == 'IBM':\n",
+        "        continue\n",
+        "    print(i)"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "AAPL\n",
+            "GOOG\n",
+            "AAPL\n",
+            "FB\n",
+            "F\n",
+            "GOOG\n",
+            "F\n",
+            "INSTA\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UVae0UslUv53",
+        "outputId": "b308608c-9e83-4e24-ef78-aa14d499e088"
+      },
+      "source": [
+        "squares = []\n",
+        "for i in [2,4,8,16,2**100]:\n",
+        "    squares.append(i**2)\n",
+        "print(squares)"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[4, 16, 64, 256, 1606938044258990275541962092341162602522202993782792835301376]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7o8yLs36U6i3",
+        "outputId": "385b7a2b-acd8-447f-a521-1978f7d5aa6e"
+      },
+      "source": [
+        "list = [2,4,8,16,2**100]\n",
+        "squares = [x**2 for x in list]\n",
+        "print(squares)"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[4, 16, 64, 256, 1606938044258990275541962092341162602522202993782792835301376]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e6sYrBLfVG7b",
+        "outputId": "9a04033e-befc-4b8c-8fae-d45eb5184dd2"
+      },
+      "source": [
+        "stocks = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
+        "selected = ['AAPL','IBM']\n",
+        "new_list = [x for x in stocks if x in selected]\n",
+        "print(new_list)"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['AAPL', 'IBM', 'AAPL', 'IBM']\n"
           ]
         }
       ]
