Creado mediante Colaboratory

--- a/dimorales_QuanconnectTutotials.ipynb
+++ b/dimorales_QuanconnectTutotials.ipynb
@@ -6,7 +6,7 @@
       "name": "dimorales_QuanconnectTutotials.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPEhSWHaOGmvfdnz2eZSI41",
+      "authorship_tag": "ABX9TyOqc5lGHyb/vs3zdAjkCk/R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9413aaa2-8a3a-43c0-d119-1dd1e0b4a48a"
+        "outputId": "1df05a6c-821a-425b-fda5-828c8c4ad8d3"
       },
       "source": [
         "my_string1 = 'Welcome to'\n",
@@ -70,7 +70,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QA79axLFFSeg",
-        "outputId": "8e1541ae-dfdf-45e5-9c30-8778ff50721a"
+        "outputId": "902e0fac-89f9-48cd-e997-9113832f0275"
       },
       "source": [
         "my_int = 2**100000\n",
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D8-0f7rDFdBh",
-        "outputId": "7d7a7b86-ea51-4812-f9a7-b4e50a961ed1"
+        "outputId": "af63e140-4534-4b79-d294-85bb0ad88365"
       },
       "source": [
         "my_string = \"2415f\"\n",
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fS1qe6qnFd1P",
-        "outputId": "f7c079ad-6404-44d8-cf61-445436901fa0"
+        "outputId": "96defba6-1811-4e20-d5d8-780f57696f33"
       },
       "source": [
         "my_string = \"300\"\n",
@@ -150,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UbpFUsc5FgqF",
-        "outputId": "f1289649-49d2-435f-f632-8b7004767bfe"
+        "outputId": "597bb900-c3a5-4d11-c609-b81cc1af851d"
       },
       "source": [
         "my_bool = True\n",
@@ -176,7 +176,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dcdJRegAFw5A",
-        "outputId": "e6c36f5b-a02c-4e8e-9a79-25d7c2723405"
+        "outputId": "409b02cc-dc9c-4397-8169-eb1640c0d273"
       },
       "source": [
         "print(\"Addition \", 3+5)\n",
@@ -207,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MzGKniVAF1fB",
-        "outputId": "8c9a488c-898b-4f07-eb06-df2848be3d45"
+        "outputId": "b7c17870-aac9-48ef-ee68-206800072b45"
       },
       "source": [
         "print(5/7)\n",
@@ -232,7 +232,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lddcquBzGFKT",
-        "outputId": "fb828f57-626d-42fa-8261-47d870f8f1d0"
+        "outputId": "32430047-e775-4284-9aa6-6e46b7e80825"
       },
       "source": [
         "my_list = [1,2,3,'Quant', 'Connect']\n",
@@ -256,7 +256,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CdupOGQIGP3_",
-        "outputId": "63ba95af-25d3-479a-c97b-81f537374bfe"
+        "outputId": "57e28980-b8a2-44b7-9cb8-0dc50900f424"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -284,7 +284,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XLPKGyKXGh8E",
-        "outputId": "ee7f83e7-702f-46d0-b921-f4a8e8b347f6"
+        "outputId": "33ca1105-3c82-493a-cacd-df779701696a"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -309,7 +309,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FFCiV-OTGuMg",
-        "outputId": "432ed06d-6a2f-4dd9-ee70-f7ef40d41602"
+        "outputId": "19e30c28-6d43-4068-c5f8-b4915a729ed6"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -333,7 +333,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0XSbTgSAHUmF",
-        "outputId": "210e7068-e93c-47e5-ccbb-441b619d5e1c"
+        "outputId": "f4f1a4df-8b0d-4e75-d0b4-6f0682909a97"
       },
       "source": [
         "print(my_list[4:])"
@@ -356,7 +356,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bgD5xPCHZMQ",
-        "outputId": "92a07f69-5578-4493-d69a-189198853d6b"
+        "outputId": "02313b14-3e62-4e5d-db4f-0120a0676ed4"
       },
       "source": [
         "print(my_list[:5])"
@@ -379,7 +379,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OuCUqEepHfJg",
-        "outputId": "59ef446f-cace-4ce3-a0c2-4b67f74b4e4f"
+        "outputId": "852b51fb-0128-4077-8d03-c092f7359153"
       },
       "source": [
         "my_list = ['Hello', 'world', 'Hello']\n",
@@ -404,7 +404,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bixBZQjGHmVg",
-        "outputId": "2f2b714e-ae09-412f-af94-64f11a9ea695"
+        "outputId": "c9b5a023-3968-4d33-d482-b10ae5bb0f7c"
       },
       "source": [
         "my_list.remove('world')\n",
@@ -439,7 +439,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xUhZC_G2H8xg",
-        "outputId": "be7457a9-5bb9-48f8-aff3-aa2f78be97e0"
+        "outputId": "774776f5-3cc7-4500-f1a8-9719cb0357fc"
       },
       "source": [
         "my_tuple = ('Welcome','to','hello world')\n",
@@ -463,7 +463,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xtps4UnVISVj",
-        "outputId": "4da4490a-aa3b-48a5-a5f9-35f73dbf6101"
+        "outputId": "6f6c1cd8-eb43-4d64-b91d-b3dd36128764"
       },
       "source": [
         "stock_list = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
@@ -476,7 +476,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'IBM', 'GOOG', 'AAPL', 'INSTA', 'FB', 'F'}\n"
+            "{'INSTA', 'IBM', 'AAPL', 'FB', 'F', 'GOOG'}\n"
           ]
         }
       ]
@@ -499,7 +499,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Wj49mZYJbhV",
-        "outputId": "a338db6e-4a80-4416-943b-6bb67c1dabfc"
+        "outputId": "02b1c5b4-8db6-48ae-dda8-7390a9da7735"
       },
       "source": [
         "print(my_dic['HELLO'])"
@@ -522,7 +522,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FMHLWwysJ2CX",
-        "outputId": "e7e4ae2c-c7e9-410b-d6cb-85065fd28b8b"
+        "outputId": "5cb576b2-a189-481d-8e55-55c3af20d3cd"
       },
       "source": [
         "my_dic['HELLO'] = 'Hello World'\n",
@@ -546,7 +546,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "czipGKRNKsUi",
-        "outputId": "f4c3652e-2532-4216-ff9b-fe294330dd95"
+        "outputId": "4adb2a21-835f-4649-b47f-3c1b9fef302d"
       },
       "source": [
         "print(my_dic.keys())"
@@ -569,7 +569,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rMg9JE7QK8tH",
-        "outputId": "f4cf0c45-d034-4b0c-ef6f-bd0fbf3bf355"
+        "outputId": "7dfb4315-4bbc-4ac7-cb27-ab566a0e3359"
       },
       "source": [
         "my_str = 'Welcome to QuantConnect'\n",
@@ -593,7 +593,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BUzEVL_uLOio",
-        "outputId": "1701b4d5-cf9e-43c7-c28d-9908ef7c9480"
+        "outputId": "acf83a0a-802d-458d-d76d-f23efc7da9ca"
       },
       "source": [
         "print('Counting the number of e appears in this sentence'.count('a'))\n",
@@ -620,7 +620,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xGSDtPvxM8jc",
-        "outputId": "1d33fa05-ab73-4755-af79-31a718b97bd6"
+        "outputId": "be6fe4ef-5d64-409a-9e0e-1735f815d183"
       },
       "source": [
         "Time = '2021-10-19 10:38:51'\n",
@@ -658,7 +658,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xb5wMX0fOEtI",
-        "outputId": "363b424a-f79e-4afc-eefa-d64d44f25021"
+        "outputId": "48d23670-1907-458b-db6f-79bda44a7ac1"
       },
       "source": [
         "my_time = 'Hour:{}, Minute:{}, Second:{}'.format('10','58','40')\n",
@@ -682,7 +682,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0j4PlIb5OgG8",
-        "outputId": "2ffae7eb-1aa8-42da-e2ac-08532c130633"
+        "outputId": "ddf040a7-eb80-42ed-f003-acc9c5765a80"
       },
       "source": [
         "print('the pi number is %f'%3.14)\n",
@@ -716,7 +716,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mb-yIhHUPe-f",
-        "outputId": "f6dfd61e-51c8-46b6-e91f-3538162ea6c5"
+        "outputId": "735e04fd-7078-457d-d088-23c75b587da9"
       },
       "source": [
         "print(3 == 5)\n",
@@ -747,7 +747,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6DvKmLJeQeZI",
-        "outputId": "1da0579b-81ec-4187-c63b-372f925cd819"
+        "outputId": "f2d2b6eb-5b2c-4e98-f88a-4659d778137f"
       },
       "source": [
         "print(10 > 5 and 7 > 5)\n",
@@ -776,7 +776,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "njf6XvBSRFtE",
-        "outputId": "240dcc55-79af-4a70-c26e-9e1dbae61f19"
+        "outputId": "2a992c9c-5ea1-464e-ca6b-aed0298d9494"
       },
       "source": [
         "print((10 > 5 or 7 < 5) and (10!=7 and 6>5) and not ( 7 < 5 or 6 < 10 and (10!=5 and 6>3)))\n",
@@ -801,7 +801,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pCqq4c6_R01v",
-        "outputId": "d127c5c8-8a55-4e63-8a51-0b1c37dcfde7"
+        "outputId": "77c5cfa5-7b3a-4483-ae56-8b325318ac59"
       },
       "source": [
         "i = 100\n",
@@ -826,7 +826,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NVwqeDydSU9P",
-        "outputId": "e4338ed0-4915-4aac-e5fd-fad820efc831"
+        "outputId": "d40a43e6-7825-4498-e8ab-1b9b5c6bc835"
       },
       "source": [
         "p = 10 > 15\n",
@@ -858,7 +858,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9I9qTAunShX_",
-        "outputId": "3e416a87-33e5-4c7c-ca6a-ccedf7ec7def"
+        "outputId": "246108c6-b455-4943-d402-899476e94acf"
       },
       "source": [
         "i = 0\n",
@@ -965,7 +965,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xvDju2-zTL7d",
-        "outputId": "a49e161a-abde-4c91-f4d4-69853c5bcf9d"
+        "outputId": "0a2bd074-9370-42a8-d0ec-178054fb50b7"
       },
       "source": [
         "for i in [1,'hello',3,'Quan',5]:\n",
@@ -993,7 +993,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "74B4wU2NTUyp",
-        "outputId": "236f491e-84c6-4823-b0a3-062be8ae1e46"
+        "outputId": "319e80dd-23da-4c87-d58c-8bcb06ea8fac"
       },
       "source": [
         "stocks = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
@@ -1024,7 +1024,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mNcxbfhDT_Xx",
-        "outputId": "151f90f0-489a-479e-c5b4-1514d2a816de"
+        "outputId": "fad99edb-eba5-476c-9526-bfb219b30637"
       },
       "source": [
         "stocks = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
@@ -1053,7 +1053,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fKTOAYOEUhoj",
-        "outputId": "b92f1fdd-1e9c-49ba-e9b4-35e4e6a1ee26"
+        "outputId": "3d471e56-0950-48b1-cf7e-99eea12c8c2c"
       },
       "source": [
         "stocks = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
@@ -1087,7 +1087,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UVae0UslUv53",
-        "outputId": "b308608c-9e83-4e24-ef78-aa14d499e088"
+        "outputId": "5de30fb8-b1bd-4560-f9f4-611f6f7faf8b"
       },
       "source": [
         "squares = []\n",
@@ -1113,7 +1113,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7o8yLs36U6i3",
-        "outputId": "385b7a2b-acd8-447f-a521-1978f7d5aa6e"
+        "outputId": "b270385b-123c-4d6f-cbd7-098467fd1410"
       },
       "source": [
         "list = [2,4,8,16,2**100]\n",
@@ -1138,7 +1138,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e6sYrBLfVG7b",
-        "outputId": "9a04033e-befc-4b8c-8fae-d45eb5184dd2"
+        "outputId": "95b42674-2cfb-497d-8ddf-2a891032fd21"
       },
       "source": [
         "stocks = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
@@ -1156,6 +1156,239 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6ts5mpPNVfvV",
+        "outputId": "1770a9c4-a99a-43eb-b850-c186eb50fbf9"
+      },
+      "source": [
+        "print([(x, y) for x in [1,4,5,6] for y in [5,1,4,2,6,'Connect'] if x != y])\n",
+        "print([str(x)+' vs '+str(y) for x in ['AAPL','GOOG','IBM','FB'] for y in ['INS','TI','CA',7] if x!=y])"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[(1, 5), (1, 4), (1, 2), (1, 6), (1, 'Connect'), (4, 5), (4, 1), (4, 2), (4, 6), (4, 'Connect'), (5, 1), (5, 4), (5, 2), (5, 6), (5, 'Connect'), (6, 5), (6, 1), (6, 4), (6, 2), (6, 'Connect')]\n",
+            "['AAPL vs INS', 'AAPL vs TI', 'AAPL vs CA', 'AAPL vs 7', 'GOOG vs INS', 'GOOG vs TI', 'GOOG vs CA', 'GOOG vs 7', 'IBM vs INS', 'IBM vs TI', 'IBM vs CA', 'IBM vs 7', 'FB vs INS', 'FB vs TI', 'FB vs CA', 'FB vs 7']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WqDryp13WLKm"
+      },
+      "source": [
+        "#3. Functions and Objective-Oriented Programming"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9oo5jVjKWPT1",
+        "outputId": "3c11d0e1-4220-4c6d-a051-c0936fc1fbac"
+      },
+      "source": [
+        "def product(x,y):\n",
+        "    return x*y\n",
+        "print(product(100,3))\n",
+        "print(product(15,10))"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "300\n",
+            "150\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oG25MBhLWwD_",
+        "outputId": "e7096d5e-9b10-41e6-ab4a-71e1f1b25abe"
+      },
+      "source": [
+        "def say_hi():\n",
+        "    print('Hello world to MN')\n",
+        "say_hi()"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello world to MN\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eOzu4Z9UW6JM",
+        "outputId": "ddc1a7e6-cd64-4b93-c32f-ab7cad001d08"
+      },
+      "source": [
+        "print(range(20))\n",
+        "print(range(10,11))\n",
+        "print(range(5,7,6))"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "range(0, 20)\n",
+            "range(10, 11)\n",
+            "range(5, 7, 6)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uqHLX9d6XOXc",
+        "outputId": "db3cc4e6-a7f2-4d6d-8a83-f38a86974d3d"
+      },
+      "source": [
+        "tickers = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INST']\n",
+        "print('The length of tickers is {}'.format(len(tickers)))\n",
+        "for i in range(len(tickers)):\n",
+        "    print(tickers[i])"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The length of tickers is 10\n",
+            "AAPL\n",
+            "GOOG\n",
+            "IBM\n",
+            "AAPL\n",
+            "IBM\n",
+            "FB\n",
+            "F\n",
+            "GOOG\n",
+            "F\n",
+            "INST\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Tx_gCtlBXbUm",
+        "outputId": "a80693bd-2cc9-4ded-8a66-8dbaea681668"
+      },
+      "source": [
+        "print(list)\n",
+        "del list\n",
+        "list"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 8, 16, 1267650600228229401496703205376]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VQk0todxX5Qq",
+        "outputId": "bf2b601b-4ac7-4977-90da-1a65487da195"
+      },
+      "source": [
+        "tickers = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INST']\n",
+        "list(map(len,tickers))"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[4, 4, 3, 4, 3, 2, 1, 4, 1, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ocgHv66zX6H5"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p9FfGy-ZX83Y"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 47,
+      "outputs": []
     }
   ]
 }
