--- a/lab8/lab 8.ipynb
+++ b/lab8/lab 8.ipynb
@@ -21,7 +21,7 @@
       "source": [
         "# Arithmetic Series\n",
         "\n",
-        "### Miguel Currea M. - Alg. G1"
+        "### Diego Morales G. - Alg. G1"
       ]
     },
     {
